# proto/api/v1/manifest.pb.go
@@ -1,0 +1,228 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.31.0
+// 	protoc        (unknown)
+// source: api/v1/manifest.proto
+
+package v1
+
+import (
+	pb "github.com/cloudevents/sdk-go/binding/format/protobuf/v2/pb"
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	_ "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type CloudEventSendResponse_Status int32
+
+const (
+	CloudEventSendResponse_OK    CloudEventSendResponse_Status = 0
+	CloudEventSendResponse_ERROR CloudEventSendResponse_Status = 1
+)
+
+// Enum value maps for CloudEventSendResponse_Status.
+var (
+	CloudEventSendResponse_Status_name = map[int32]string{
+		0: "OK",
+		1: "ERROR",
+	}
+	CloudEventSendResponse_Status_value = map[string]int32{
+		"OK":    0,
+		"ERROR": 1,
+	}
+)
+
+func (x CloudEventSendResponse_Status) Enum() *CloudEventSendResponse_Status {
+	p := new(CloudEventSendResponse_Status)
+	*p = x
+	return p
+}
+
+func (x CloudEventSendResponse_Status) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (CloudEventSendResponse_Status) Descriptor() protoreflect.EnumDescriptor {
+	return file_api_v1_manifest_proto_enumTypes[0].Descriptor()
+}
+
+func (CloudEventSendResponse_Status) Type() protoreflect.EnumType {
+	return &file_api_v1_manifest_proto_enumTypes[0]
+}
+
+func (x CloudEventSendResponse_Status) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use CloudEventSendResponse_Status.Descriptor instead.
+func (CloudEventSendResponse_Status) EnumDescriptor() ([]byte, []int) {
+	return file_api_v1_manifest_proto_rawDescGZIP(), []int{0, 0}
+}
+
+type CloudEventSendResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Status  CloudEventSendResponse_Status `protobuf:"varint,1,opt,name=status,proto3,enum=v1.CloudEventSendResponse_Status" json:"status,omitempty"`
+	Message string                        `protobuf:"bytes,2,opt,name=message,proto3" json:"message,omitempty"`
+}
+
+func (x *CloudEventSendResponse) Reset() {
+	*x = CloudEventSendResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_v1_manifest_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CloudEventSendResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CloudEventSendResponse) ProtoMessage() {}
+
+func (x *CloudEventSendResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_api_v1_manifest_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CloudEventSendResponse.ProtoReflect.Descriptor instead.
+func (*CloudEventSendResponse) Descriptor() ([]byte, []int) {
+	return file_api_v1_manifest_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *CloudEventSendResponse) GetStatus() CloudEventSendResponse_Status {
+	if x != nil {
+		return x.Status
+	}
+	return CloudEventSendResponse_OK
+}
+
+func (x *CloudEventSendResponse) GetMessage() string {
+	if x != nil {
+		return x.Message
+	}
+	return ""
+}
+
+var File_api_v1_manifest_proto protoreflect.FileDescriptor
+
+var file_api_v1_manifest_proto_rawDesc = []byte{
+	0x0a, 0x15, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x61, 0x6e, 0x69, 0x66, 0x65, 0x73,
+	0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x02, 0x76, 0x31, 0x1a, 0x1c, 0x67, 0x6f, 0x6f,
+	0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69,
+	0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
+	0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73,
+	0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x25, 0x63, 0x6c, 0x6f, 0x75,
+	0x64, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x73, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66,
+	0x2f, 0x63, 0x6c, 0x6f, 0x75, 0x64, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x22, 0x8a, 0x01, 0x0a, 0x16, 0x43, 0x6c, 0x6f, 0x75, 0x64, 0x45, 0x76, 0x65, 0x6e, 0x74,
+	0x53, 0x65, 0x6e, 0x64, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x39, 0x0a, 0x06,
+	0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x21, 0x2e, 0x76,
+	0x31, 0x2e, 0x43, 0x6c, 0x6f, 0x75, 0x64, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x53, 0x65, 0x6e, 0x64,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52,
+	0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61,
+	0x67, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67,
+	0x65, 0x22, 0x1b, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x06, 0x0a, 0x02, 0x4f,
+	0x4b, 0x10, 0x00, 0x12, 0x09, 0x0a, 0x05, 0x45, 0x52, 0x52, 0x4f, 0x52, 0x10, 0x01, 0x32, 0x76,
+	0x0a, 0x12, 0x43, 0x6c, 0x6f, 0x75, 0x64, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x73, 0x53, 0x65, 0x72,
+	0x76, 0x69, 0x63, 0x65, 0x12, 0x60, 0x0a, 0x04, 0x53, 0x65, 0x6e, 0x64, 0x12, 0x20, 0x2e, 0x63,
+	0x6c, 0x6f, 0x75, 0x64, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x62, 0x75, 0x66, 0x2e, 0x43, 0x6c, 0x6f, 0x75, 0x64, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x1a, 0x1a,
+	0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6c, 0x6f, 0x75, 0x64, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x53, 0x65,
+	0x6e, 0x64, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93,
+	0x02, 0x14, 0x3a, 0x01, 0x2a, 0x22, 0x0f, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6c, 0x6f, 0x75, 0x64,
+	0x65, 0x76, 0x65, 0x6e, 0x74, 0x73, 0x42, 0x2a, 0x5a, 0x28, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
+	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6b, 0x75, 0x62, 0x65, 0x2d, 0x6f, 0x72, 0x63, 0x68, 0x65, 0x73,
+	0x74, 0x72, 0x61, 0x2f, 0x6d, 0x61, 0x65, 0x73, 0x74, 0x72, 0x6f, 0x2f, 0x61, 0x70, 0x69, 0x2f,
+	0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_api_v1_manifest_proto_rawDescOnce sync.Once
+	file_api_v1_manifest_proto_rawDescData = file_api_v1_manifest_proto_rawDesc
+)
+
+func file_api_v1_manifest_proto_rawDescGZIP() []byte {
+	file_api_v1_manifest_proto_rawDescOnce.Do(func() {
+		file_api_v1_manifest_proto_rawDescData = protoimpl.X.CompressGZIP(file_api_v1_manifest_proto_rawDescData)
+	})
+	return file_api_v1_manifest_proto_rawDescData
+}
+
+var file_api_v1_manifest_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_api_v1_manifest_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_api_v1_manifest_proto_goTypes = []interface{}{
+	(CloudEventSendResponse_Status)(0), // 0: v1.CloudEventSendResponse.Status
+	(*CloudEventSendResponse)(nil),     // 1: v1.CloudEventSendResponse
+	(*pb.CloudEvent)(nil),              // 2: cloudevents.protobuf.CloudEvent
+}
+var file_api_v1_manifest_proto_depIdxs = []int32{
+	0, // 0: v1.CloudEventSendResponse.status:type_name -> v1.CloudEventSendResponse.Status
+	2, // 1: v1.CloudEventsService.Send:input_type -> cloudevents.protobuf.CloudEvent
+	1, // 2: v1.CloudEventsService.Send:output_type -> v1.CloudEventSendResponse
+	2, // [2:3] is the sub-list for method output_type
+	1, // [1:2] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_api_v1_manifest_proto_init() }
+func file_api_v1_manifest_proto_init() {
+	if File_api_v1_manifest_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_api_v1_manifest_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*CloudEventSendResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_api_v1_manifest_proto_rawDesc,
+			NumEnums:      1,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_v1_manifest_proto_goTypes,
+		DependencyIndexes: file_api_v1_manifest_proto_depIdxs,
+		EnumInfos:         file_api_v1_manifest_proto_enumTypes,
+		MessageInfos:      file_api_v1_manifest_proto_msgTypes,
+	}.Build()
+	File_api_v1_manifest_proto = out.File
+	file_api_v1_manifest_proto_rawDesc = nil
+	file_api_v1_manifest_proto_goTypes = nil
+	file_api_v1_manifest_proto_depIdxs = nil
+}
