# proto/api/v1/manifest_grpc.pb.go
@@ -1,0 +1,110 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             (unknown)
+// source: api/v1/manifest.proto
+
+package v1
+
+import (
+	context "context"
+	pb "github.com/cloudevents/sdk-go/binding/format/protobuf/v2/pb"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+const (
+	CloudEventsService_Send_FullMethodName = "/v1.CloudEventsService/Send"
+)
+
+// CloudEventsServiceClient is the client API for CloudEventsService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type CloudEventsServiceClient interface {
+	Send(ctx context.Context, in *pb.CloudEvent, opts ...grpc.CallOption) (*CloudEventSendResponse, error)
+}
+
+type cloudEventsServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewCloudEventsServiceClient(cc grpc.ClientConnInterface) CloudEventsServiceClient {
+	return &cloudEventsServiceClient{cc}
+}
+
+func (c *cloudEventsServiceClient) Send(ctx context.Context, in *pb.CloudEvent, opts ...grpc.CallOption) (*CloudEventSendResponse, error) {
+	out := new(CloudEventSendResponse)
+	err := c.cc.Invoke(ctx, CloudEventsService_Send_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// CloudEventsServiceServer is the server API for CloudEventsService service.
+// All implementations must embed UnimplementedCloudEventsServiceServer
+// for forward compatibility
+type CloudEventsServiceServer interface {
+	Send(context.Context, *pb.CloudEvent) (*CloudEventSendResponse, error)
+	mustEmbedUnimplementedCloudEventsServiceServer()
+}
+
+// UnimplementedCloudEventsServiceServer must be embedded to have forward compatible implementations.
+type UnimplementedCloudEventsServiceServer struct {
+}
+
+func (UnimplementedCloudEventsServiceServer) Send(context.Context, *pb.CloudEvent) (*CloudEventSendResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Send not implemented")
+}
+func (UnimplementedCloudEventsServiceServer) mustEmbedUnimplementedCloudEventsServiceServer() {}
+
+// UnsafeCloudEventsServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to CloudEventsServiceServer will
+// result in compilation errors.
+type UnsafeCloudEventsServiceServer interface {
+	mustEmbedUnimplementedCloudEventsServiceServer()
+}
+
+func RegisterCloudEventsServiceServer(s grpc.ServiceRegistrar, srv CloudEventsServiceServer) {
+	s.RegisterService(&CloudEventsService_ServiceDesc, srv)
+}
+
+func _CloudEventsService_Send_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(pb.CloudEvent)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CloudEventsServiceServer).Send(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: CloudEventsService_Send_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CloudEventsServiceServer).Send(ctx, req.(*pb.CloudEvent))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// CloudEventsService_ServiceDesc is the grpc.ServiceDesc for CloudEventsService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var CloudEventsService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "v1.CloudEventsService",
+	HandlerType: (*CloudEventsServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "Send",
+			Handler:    _CloudEventsService_Send_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/manifest.proto",
+}
