# swagger/api/v1/manifest.swagger.json
@@ -1,12 +1,12 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "api/v1/resource.proto",
+    "title": "api/v1/manifest.proto",
     "version": "version not set"
   },
   "tags": [
     {
-      "name": "ResourceService"
+      "name": "CloudEventsService"
     }
   ],
   "consumes": [
@@ -16,14 +16,14 @@
     "application/json"
   ],
   "paths": {
-    "/v1/consumers/{consumerId}/resources": {
+    "/v1/cloudevents": {
       "post": {
-        "operationId": "ResourceService_Create",
+        "operationId": "CloudEventsService_Send",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1Resource"
+              "$ref": "#/definitions/v1CloudEventSendResponse"
             }
           },
           "default": {
@@ -35,88 +35,17 @@
         },
         "parameters": [
           {
-            "name": "consumerId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "object",
+            "name": "body",
+            "description": "CloudEvent is copied from\nhttps://github.com/cloudevents/spec/blob/master/protobuf-format.md.",
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object"
+              "$ref": "#/definitions/protobufCloudEvent"
             }
           }
         ],
         "tags": [
-          "ResourceService"
-        ]
-      }
-    },
-    "/v1/resources/{id}": {
-      "get": {
-        "operationId": "ResourceService_Read",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1Resource"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/googlerpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "ResourceService"
-        ]
-      },
-      "put": {
-        "operationId": "ResourceService_Update",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1Resource"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/googlerpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "object",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object"
-            }
-          }
-        ],
-        "tags": [
-          "ResourceService"
+          "CloudEventsService"
         ]
       }
     }
@@ -152,34 +81,103 @@
       "additionalProperties": {},
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n    // or ...\n    if (any.isSameTypeAs(Foo.getDefaultInstance())) {\n      foo = any.unpack(Foo.getDefaultInstance());\n    }\n\nExample 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\nExample 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\nJSON\n\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
     },
-    "protobufNullValue": {
-      "type": "string",
-      "enum": [
-        "NULL_VALUE"
-      ],
-      "default": "NULL_VALUE",
-      "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\n The JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
-    },
-    "v1Resource": {
+    "protobufCloudEvent": {
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
-        },
-        "consumerId": {
-          "type": "string"
-        },
-        "generationId": {
           "type": "string",
-          "format": "int64"
+          "description": "Unique event identifier."
         },
-        "object": {
-          "type": "object"
+        "source": {
+          "type": "string",
+          "description": "URI of the event source."
         },
+        "specVersion": {
+          "type": "string",
+          "description": "Version of the spec in use."
+        },
+        "type": {
+          "type": "string",
+          "description": "Event type identifier."
+        },
+        "attributes": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/protobufCloudEventAttributeValue"
+          },
+          "title": "Optional \u0026 Extension Attributes"
+        },
+        "binaryData": {
+          "type": "string",
+          "format": "byte",
+          "description": "If the event is binary data then the datacontenttype attribute\nshould be set to an appropriate media-type."
+        },
+        "textData": {
+          "type": "string",
+          "description": "If the event is string data then the datacontenttype attribute\nshould be set to an appropriate media-type such as application/json."
+        },
+        "protoData": {
+          "$ref": "#/definitions/protobufAny",
+          "description": "If the event is a protobuf then it must be encoded using this Any\ntype. The datacontenttype attribute should be set to\napplication/protobuf and the dataschema attribute set to the message\ntype."
+        }
+      },
+      "description": "CloudEvent is copied from\nhttps://github.com/cloudevents/spec/blob/master/protobuf-format.md."
+    },
+    "protobufCloudEventAttributeValue": {
+      "type": "object",
+      "properties": {
+        "ceBoolean": {
+          "type": "boolean",
+          "description": "Boolean value."
+        },
+        "ceInteger": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Integer value."
+        },
+        "ceString": {
+          "type": "string",
+          "description": "String value."
+        },
+        "ceBytes": {
+          "type": "string",
+          "format": "byte",
+          "description": "Byte string value."
+        },
+        "ceUri": {
+          "type": "string",
+          "description": "URI value."
+        },
+        "ceUriRef": {
+          "type": "string",
+          "description": "URI reference value."
+        },
+        "ceTimestamp": {
+          "type": "string",
+          "format": "date-time",
+          "description": "Timestamp value."
+        }
+      },
+      "description": "CloudEventAttribute enables extensions to use any of the seven allowed\ndata types as the value of an envelope key."
+    },
+    "v1CloudEventSendResponse": {
+      "type": "object",
+      "properties": {
         "status": {
-          "type": "object"
+          "$ref": "#/definitions/v1CloudEventSendResponseStatus"
+        },
+        "message": {
+          "type": "string"
         }
       }
+    },
+    "v1CloudEventSendResponseStatus": {
+      "type": "string",
+      "enum": [
+        "OK",
+        "ERROR"
+      ],
+      "default": "OK"
     }
   }
 }
